[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"
authors = ["François Perron <fperron@gmail.com>"]
description = "Advent of code 2023"
license = "MIT"

[dependencies]
ureq = "2.9.1"
regex = "1.10.2"
itertools = "0.12.0"
z3 = { version = "0.12.1", features = ["static-link-z3"] }